<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/top_lane"
            android:focusable="true"
            app:srcCompat="@drawable/top" />

        <ImageView
            android:id="@+id/jungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/jungle"
            android:focusable="true"
            app:srcCompat="@drawable/jungle" />

        <ImageView
            android:id="@+id/mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/mid_lane"
            android:focusable="true"
            app:srcCompat="@drawable/middle" />

        <ImageView
            android:id="@+id/adc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/adc"
            android:focusable="true"
            app:srcCompat="@drawable/adc" />

        <ImageView
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/support"
            android:focusable="true"
            app:srcCompat="@drawable/support" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>